--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,18 @@ button:hover {
   z-index: -1;
 }
 
+.banner video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+}
+
 @media (min-aspect-ratio: 16/9) {
   .banner video {
     width: 100%;
